tests/e2e/negative/n0013_wrong_field_count.cryo
// @test: wrong_field_count
// @expect: compile_fail
// @mode: raw
// @description: Struct initialization with wrong number of fields should fail
// @tags: structs, errors

namespace NegWrongFieldCount;

type struct Point {
    x: int;
    y: int;
}

function main() -> int {
    const p: Point = Point { x: 1 };
    return 0;
}
